Change internal plugin version too

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "pkg": "cross-var echo Package $npm_package_version",
-    "build": "tiddlywiki . --output docs --build index && cross-var shx mkdir docs/$npm_package_version && cross-var shx cp docs/index.html docs/$npm_package_version/index.html"
+    "build": "tiddlywiki . --output docs --build index && cross-var shx mkdir -p docs/$npm_package_version && cross-var shx cp docs/index.html docs/$npm_package_version/index.html"
   },
   "repository": {
     "type": "git",
